...
            }
            .navigationTitle("Patients")
            .toolbar {
                Button(action: {
                    isAddingPatient = true
                }) {
                    Label("Add Patient", systemImage: "plus")
                }
            }
            .sheet(isPresented: $isAddingPatient) {
                NewPatientForm()
            }
            .searchable(text: $searchText, prompt: "Search by last name")
...
